# bevy_tui_texture

./: .gitignore  CHANGELOG.md  CLAUDE.md  CONTRIBUTING.md  Cargo.toml  EVENTS.md  LICENSE  NOTICE  README.md  SKILL.md
.cargo/: config.toml
.github/workflows/: ci.yml  wasm.yml
docs/: README.md  index.html
examples/: benchmark.rs  form_demo.rs  helloworld.rs  multiple_terminals.rs  resize.rs  retro_crt.rs  shader.rs  shader_mesh.rs  terminal_texture_2d.rs  terminal_texture_3d.rs  transparent_world_quad.rs  tui_component.rs  wasm_demo.rs  wasm_serve.rs  web_server.rs  widget_catalog_2d.rs  widget_catalog_3d.rs  world_terminal.rs
examples/web/: index.html  sw-debug.js  wasm_demo.js
src/: bevy_plugin.rs  fonts.rs  lib.rs  setup.rs
src/backend/: bevy_backend.rs  mod.rs  rasterize.rs
src/backend/programmatic_glyphs/: block_elements.rs  box_drawing.rs  braille.rs  mod.rs  powerline.rs  primitives.rs
src/backend/shaders/: composite_fg.wgsl
src/input/: crossterm_compat.rs  mod.rs  ray.rs
src/utils/: mod.rs  text_atlas.rs
xtask/src/: main.rs
