[package]
name = "bevy_tui_texture"
version = "0.2.0"
edition = "2024"
authors = ["TTT"]
autoexamples = false
license = "MIT"
keywords = ["gamedev", "bevy", "ratatui", "terminal", "tui"]
categories = ["command-line-utilities", "game-development", "multimedia", "wasm"]
build = false
readme = "README.md"
description = "A Bevy plugin for rendering terminal-style UIs using ratatui and WGPU"
repository = "https://github.com/tt-toe/bevy_tui_texture"

[features]
default = ["keyboard_input", "mouse_input", "ratatui_backend"]
keyboard_input = []
mouse_input = []
ratatui_backend = ["dep:ratatui"]
bold_italic_fonts = []
emoji_support = ["dep:unicode-properties"]

# for Native
[profile.release]
opt-level = 3      # Optimize for size (use "3" for speed)
lto = "fat"
codegen-units = 1
panic = "abort"
strip = true         # Strip symbols for smaller binary
debug = false

[profile.dev]
opt-level = 1

[profile.dev.package."*"]
opt-level = 3

# WASM Release Profile (for smaller WASM binaries)
[profile.wasm-release]
inherits = "release"
opt-level = "z"
lto = "fat"
codegen-units = 1
panic = "abort"
strip = true         # Strip symbols for smaller binary
debug = false

# General
[dependencies]
bevy = { version = "0.18", default-features = false, features = [
    "zstd_rust",
    "tonemapping_luts",
    "bevy_render",
    "bevy_core_pipeline",
    "bevy_pbr",            # For MeshMaterial3d, StandardMaterial
    "bevy_sprite",
    "bevy_sprite_render",
    "bevy_picking",        # For mesh ray casting
    "mesh_picking",        # For mesh_picking module
    "bevy_ui_render",
    "webgl2",              # WebGL2 backend for wasm
    "x11"                  # Keep x11 for native Linux
]}
ratatui = { version = "0.30.0", optional = true, default-features = false }
wgpu = { version = "27.0.1", default-features = false, features = ["wgsl", "webgl"] }
rustybuzz = "0.20.0"
raqote = { version = "0.8.5", default-features = false }
tiny-skia = "0.11"
bytemuck = { version = "1.23.2", features = ["derive"] }
bitvec = { version = "1.0.1", default-features = false, features = ["std"] }
indexmap = { version = "2.11.0", default-features = false, features = ["std"] }
evictor = { version = "0.5.1", default-features = false }
unicode-width = "0.2.0"
web-time = "1.1"
tracing = "0.1.44"
unicode-properties = { version = "0.1.3", optional = true }

[target.'cfg(target_arch = "wasm32")'.dependencies]
wasm-bindgen = "=0.2.106"
web-sys = { version = "=0.3.83", features = ["Window", "Document", "HtmlCanvasElement", "console"] }
console_error_panic_hook = "0.1"
getrandom = { version = "0.2", features = ["js"] }

[dev-dependencies]
winit = "0.30.12"
env_logger = "0.11"
futures-lite = "2.5"
anyhow = "1.0"
tokio = { version = "1.42", features = ["rt", "macros"] }
pollster = "0.3"
tiny_http = "0.12"
rand = "0.8"

[target.'cfg(target_arch = "wasm32")'.dev-dependencies]
wasm-bindgen-test = "=0.3.56"

[target.'cfg(not(target_arch = "wasm32"))'.dev-dependencies]
font-kit = "0.14"

[lints.clippy]
type_complexity = "allow"

[[example]]
name = "widget_catalog_2d"
path = "examples/widget_catalog_2d.rs"
[[example]]
name = "widget_catalog_3d"
path = "examples/widget_catalog_3d.rs"
[[example]]
name = "multiple_terminals"
path = "examples/multiple_terminals.rs"
[[example]]
name = "helloworld"
path = "examples/helloworld.rs"
[[example]]
name = "benchmark"
path = "examples/benchmark.rs"
[[example]]
name = "shader"
path = "examples/shader.rs"
[[example]]
name = "wasm_demo"
path = "examples/wasm_demo.rs"
[[example]]
name = "wasm_serve"
path = "examples/wasm_serve.rs"

